fix JWTService as public access & all unused imports & long creation deprecated